# six-cats-logger

./: .gitignore  README.md
SixCatsLogger/: CMakeLists.txt  keeper.sh
SixCatsLogger/c6_lib/: CMakeLists.txt
SixCatsLogger/c6_lib/include/: SixCatsLogger.h  SixCatsLoggerMacro.h
SixCatsLogger/c6_lib/src/: SixCatsLogger.cpp
SixCatsLogger/demo_app/: CMakeLists.txt
SixCatsLogger/demo_app/app/: CMakeLists.txt
SixCatsLogger/demo_app/app/src/: BigSmoke.cpp  BigSmoke.h  main.cpp
SixCatsLogger/demo_app/basic_macro_demo/: CMakeLists.txt
SixCatsLogger/demo_app/basic_macro_demo/include/: BasicC6MacroDemo.h
SixCatsLogger/demo_app/basic_macro_demo/src/: BasicC6MacroDemo.cpp
SixCatsLogger/demo_app/command_line_options_processor/: CMakeLists.txt
SixCatsLogger/demo_app/command_line_options_processor/include/: CLOptionsProcessor.h
SixCatsLogger/demo_app/command_line_options_processor/src/: CLOptionsProcessor.cpp
